// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WarehouseInsightsSqlBuilder > default > sql 1`] = `
"select
        DATE_FORMAT(CONVERT_TZ(FROM_UNIXTIME("events"."event_timestamp" / 1000), '+00:00', 'UTC'), '%Y-%m-%d') date , count(1) as "$all_event"
      from "events" 
      where "events"."event_timestamp" BETWEEN '1753977600000' AND '1754064000000' AND (1 = 1)
      group by 1
      order by 1 desc
      limit 1000"
`;

exports[`WarehouseInsightsSqlBuilder > with filter > sql 1`] = `
"select
        DATE_FORMAT(CONVERT_TZ(FROM_UNIXTIME("events"."event_timestamp" / 1000), '+00:00', 'UTC'), '%Y-%m-%d') date , count(1) as "$all_event"
      from "events" INNER JOIN "event_parameters" ON "events"."event_name" = "event_parameters"."event_name" AND "event_parameters"."event_param_value" = 'value'
      where "events"."event_timestamp" BETWEEN '1753977600000' AND '1754064000000' AND (1 = 1)
      group by 1
      order by 1 desc
      limit 1000"
`;
